--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+body{
+    padding: 0;
+    margin: 0;
+}
+
+* {
+    box-sizing: border-box;
+}
+
 .hero-bg {
     background-image: url('assets/hero_background.png');
     background-size: 1920px 1080px;
