--- a/style/style.css
+++ b/style/style.css
@@ -8,7 +8,7 @@ body{
 }
 
 .hero-bg {
-    background-image: url('assets/hero_background.png');
+    background-image: url('../assets/hero_background.png');
     background-size: 1920px 1080px;
     background-position: center;
     background-repeat: no-repeat;
